--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
 		"test": "npm run test:unit -- --run",
 		"db:push": "drizzle-kit push",
 		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio"
+		"db:studio": "drizzle-kit studio",
+		"db:generate": "drizzle-kit generate",
+		"migrate": "tsx scripts/simple-migrate.ts",
+		"db:seed": "npm run migrate"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
@@ -25,6 +28,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"@types/better-sqlite3": "^7.6.13",
 		"@types/node": "^22",
 		"drizzle-kit": "^0.30.2",
 		"jsdom": "^26.0.0",
@@ -34,11 +38,14 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
+		"tsx": "^4.20.6",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.6",
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
+		"better-sqlite3": "^12.4.1",
+		"dotenv": "^17.2.2",
 		"drizzle-orm": "^0.40.0",
 		"postgres": "^3.4.5"
 	}
